// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prueba de GifGrid Debe demostrar items cuando se cargan imagenes useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    pika
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="abc"
      key="abc"
      title="pika"
      url="https://"
    />
    <GifGridItem
      id="123"
      key="123"
      title="kiss"
      url="https://holi"
    />
  </div>
</Fragment>
`;

exports[`Prueba de GifGrid Debe mostrarse correctamente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    pika
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
